# local-agent-viewer

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  config.agent.example.json  config.collector.example.json  config.example.json  config.py  interactions.html  kb_indexer.py  mcp_server.py  migrate.py  parser.py  parser_chatgpt.py  pyproject.toml  queries.py  requirements-optional.txt  server.py  sql_classifier.py
.github/workflows/: ci.yml
classifiers/: __init__.py  openai_classifier.py
docs/: BUG_subagenti_workflow.md  CHANGELOG.md  DATA_MODEL.md  PROMPT_lav_export_fix.md  feasibility-gantt-integration.md  infrastructure.md  remote-mcp-server.md
docs/experiments/: 2026-07-07-local-twostage-classification.md
docs/restyle/: ANALYSIS.md  IMPLEMENTATION_PLAN.md  mockup-A-quiet-canvas.html  mockup-B-threaded-rail.html  mockup-C-calm-bubbles.html  mockup-RECOMMENDED.html
lav/: __init__.py  backfill.py  cli.py  config.py  mcp_server.py  pricing.py  queries.py  server.py  taxonomy.example.json  taxonomy.py
lav/classifiers/: CLAUDE.md  __init__.py  ollama_compat.py  openai_classifier.py  openai_strict.py  sql_classifier.py
lav/parsers/: chatgpt.py  claude_ai.py  jsonl.py
lav/qdrant/: __init__.py  indexer.py  kb_indexer.py  store.py
okf/: classification.md  enrichment-pipeline.md  index.md  schema.md  sensitivity.md
qdrant/: __init__.py  indexer.py
scripts/: deploy_minimacs.sh  migrate.py  migrate_cowork_merge.py  reproject_cowork_inplace.py
static/: dashboard.html  tags.html
tests/: test_codex_source_parsing.py  test_title_parsing.py
(+29 files in other folders)
